tests/integration/snapshots/test_compile_import_from_symlink_file.stderr.txt
Error: [ROOT]/contracts/main[LINE]: error: Failed to import: Cannot import symlink file
   2 |             import "./linked-lib.tolk";
     |                    ^^^^^^^^^^^^^^^^^^^

